compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__invalid_type_alias_name.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 1286
expression: type Fancy_Bool = Bool
snapshot_kind: text
---
----- SOURCE CODE
type Fancy_Bool = Bool

----- ERROR
error: Invalid type alias name
  ┌─ /src/one/two.gleam:1:6
  │
1 │ type Fancy_Bool = Bool
  │      ^^^^^^^^^^ This is not a valid type alias name

Hint: Type alias names start with an uppercase letter and contain only
lowercase letters, numbers, and uppercase letters.
Try: FancyBool
